--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,8 @@
     "typescript": "^4.0.0"
   },
   "devDependencies": {
+    "@types/express": "^5.0.5",
+    "@types/node": "^24.10.0",
     "ts-node": "^10.0.0",
     "ts-node-dev": "^1.0.0"
   },
