--- a/client/package.json
+++ b/client/package.json
@@ -4,14 +4,16 @@
   "private": true,
   "scripts": {
     "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
-    "build": "react-scripts build",
+    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "i18next": "^25.6.0",
     "lucide-react": "^0.292.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^16.2.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.1",
     "typescript": "^4.1.2"
@@ -19,6 +21,7 @@
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-i18next": "^7.8.3",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.16",
     "cross-env": "^7.0.3",
