--- a/client/package.json
+++ b/client/package.json
@@ -2,11 +2,14 @@
   "name": "mindly-client",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://ngandinhtk.github.io/mindly",
   "scripts": {
     "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
     "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "i18next": "^25.6.0",
