--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -b main -d build"
+
   },
   "dependencies": {
     "i18next": "^25.6.0",
