--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,8 @@
   "name": "mindly-client",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://ngandinhtk.github.io/mindly",
+  "description": "Mindly Client",
   "scripts": {
     "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
     "build": "react-scripts build",
