--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,11 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-
   },
   "dependencies": {
+    "html2canvas": "^1.4.1",
     "i18next": "^25.6.0",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.292.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
