--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "version": "1.0.0",
   "homepage": "https://ngandinhtk.github.io/mindly",
-  "description": "Root for Heroku deployment",
+  "description": "Root for github deployment",
   "name": "mindly-root",
   "private": true,
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
-    "build": "react-scripts build",
+    "deploy": "gh-pages -d client/build",
+    "build": "npm run build --prefix client",
     "start": "concurrently \"npm run server\" \"npm run client\"",
     "server": "cd server && npm start",
     "client": "cd client && npm start",
@@ -20,7 +20,6 @@
     "gh-pages": "^6.3.0"
   },
   "dependencies": {
-    "react-scripts": "^5.0.1",
     "concurrently": "^8.2.2"
   }
 }
