--- a/client/package.json
+++ b/client/package.json
@@ -1,51 +1,26 @@
 {
-  "name": "mindly-client",
   "version": "1.0.0",
-  "private": true,
   "homepage": "https://ngandinhtk.github.io/mindly",
-  "description": "Mindly Client",
+  "description": "Root for Heroku deployment",
+  "name": "mindly-root",
+  "private": true,
   "scripts": {
-    "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -b master -d build",
+    "build": "react-scripts build",
+    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "server": "cd server && npm start",
+    "client": "cd client && npm start",
+    "install:all": "cd client && npm install && cd ../server && npm install"
   },
-  "dependencies": {
-    "html2canvas": "^1.4.1",
-    "i18next": "^25.6.0",
-    "jspdf": "^3.0.3",
-    "lucide-react": "^0.292.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-i18next": "^16.2.4",
-    "react-router-dom": "^6.22.3",
-    "react-scripts": "^5.0.1",
-    "typescript": "^4.1.2"
+  "engines": {
+    "node": "16.x"
   },
   "devDependencies": {
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-i18next": "^7.8.3",
-    "autoprefixer": "^10.4.16",
-    "cross-env": "^7.0.3",
-    "cssnano": "^7.1.2",
-    "postcss": "^8.4.31",
-    "postcss-import": "^16.1.1",
-    "postcss-preset-env": "^10.4.0",
-    "tailwindcss": "^3.3.5"
+    "gh-pages": "^6.3.0"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "react-scripts": "^5.0.1",
+    "concurrently": "^8.2.2"
   }
 }
