--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "name": "mindly-root",
   "private": true,
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
-    "build": "react-scripts build",
+    "deploy": "gh-pages -d client/build",
+    "build": "cd client && npm run build",
     "start": "concurrently \"npm run server\" \"npm run client\"",
     "server": "cd server && npm start",
     "client": "cd client && npm start",
@@ -20,7 +19,6 @@
     "gh-pages": "^6.3.0"
   },
   "dependencies": {
-    "react-scripts": "^5.0.1",
     "concurrently": "^8.2.2"
   }
 }
