--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,1 @@
-# Dependencies
-node_modules/
-**/node_modules/
-
-# Production build
-/build
-/dist
-**/build
-**/dist
-
-# Environment files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Debug logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# IDE/Editor folders
-.idea/
-.vscode/
-*.swp
-*.swo
-
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
+node_modules
