--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "react-dom": "^17.0.2",
     "react-i18next": "^16.2.4",
     "react-router-dom": "^6.22.3",
-    "react-scripts": "^5.0.1",
-    "typescript": "^4.1.2"
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
@@ -34,7 +33,8 @@
     "postcss": "^8.4.31",
     "postcss-import": "^16.1.1",
     "postcss-preset-env": "^10.4.0",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.5.4"
   },
   "browserslist": {
     "production": [
