--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
     "autoprefixer": "^10.4.16",
     "cross-env": "^7.0.3",
     "cssnano": "^7.1.2",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.31",
     "postcss-import": "^16.1.1",
     "postcss-preset-env": "^10.4.0",
     "tailwindcss": "^3.3.5",
-    "typescript": "^4.9.5"
+    "typescript": "^5.0.0"
   },
   "browserslist": {
     "production": [
